feat: refine existing services according to model changes